2007-09-04   Theodore Kilgore <kilgota@auburn.edu>  
	* library.c: ZINA Mini Digital Keychain Camera, reported by 
	 Alvin Austin <alvin.austin@gmail.com>

2007-08-24   Theodore Kilgore <kilgota@auburn.edu>  
	* library.c: Suprema Digital Keychain Camera added, which has 
	new product ID 0x913C, and is able to delete individual photos. 
	* digigr8.c: changes required here, too, to support individual 
	photo deletion. 


2007-07-23   Theodore Kilgore <kilgota@auburn.edu>
	* README.digigr8: Notes on how to change the capture-preview 
	resolution setting added. 

2007-07-16   Theodore Kilgore <kilgota@auburn.edu>
	* library.c: "Disney pix micro" camera supports "delete all."
	Also, digigr8 cameras will do capture_preview. These two functions added.
	0x9050 cameras need to be distinguished from 0x905C cameras. 
	* digigr8.c: camera functions to support deletion and capture.
	* digigr8.h: necessary changes. 

2007-07-12   Theodore Kilgore <kilgota@auburn.edu>
	* library.c: "Disney pix micro" camera, 0x2770:0x9050, works 
	with this driver. Added it. 


2007-06-25   Theodore Kilgore <kilgota@auburn.edu>
	* digi_postprocess.c: removal of superfluous variables. 
	* digigr8.c: signedness warnings fixed
	* library.c: ditto 


2007-03-28   Theodore Kilgore <kilgota@auburn.edu>

	* digi_postprocess.c: small improvements to decompression algorithm.
	* library.c: small improvements to decompression algorithm.

2007-03-28   Theodore Kilgore <kilgota@auburn.edu>

	* digi_postprocess.c: a decompression algorithm is installed. 
	* digigr8.c: small changes to accommodate decompression
	* library.c: small changes in get_file_func() to accommodate 
	use of decompression.
	* digigr8.h: new functions added for stage 1 and stage 2 decompression
	* README.digigr8: updated to describe new functionality

2006-12-13   Theodore Kilgore <kilgota@auburn.edu>

	* digigr8.c: removed superfluous function digi_read_data()..



2006-06-22   Marcus Meissner  <marcus@jet.franken.de>
