@@ -72,7 +72,8 @@ static const struct {
 	                      GP_DRIVER_STATUS_PRODUCTION , 0x2770 , 0x9120},
 	{"iConcepts digital camera" ,
                           GP_DRIVER_STATUS_PRODUCTION , 0x2770 , 0x9120},
-	{"Sakar Kidz Cam",    GP_DRIVER_STATUS_EXPERIMENTAL, 0x2770, 0x9120},
+	{"Sakar Kidz Cam 86379",    GP_DRIVER_STATUS_EXPERIMENTAL, 0x2770, 
+								    0x9120},
 	{"ViviCam3350",       GP_DRIVER_STATUS_EXPERIMENTAL, 0x2770, 0x9120},
 	{"ViviCam5B",         GP_DRIVER_STATUS_EXPERIMENTAL, 0x2770, 0x9120},
 	{"DC-N130t",          GP_DRIVER_STATUS_EXPERIMENTAL, 0x2770, 0x9120},
