@@ -1,3 +1,6 @@
+2007-10-16   Theodore Kilgore <kilgota@auburn.edu>
+	* library.c: Several Sakar cameras added
+
 2007-06-25   Theodore Kilgore <kilgota@auburn.edu>
 	* library.c: Clean up signedness warnings
 	* sonix.c:   ditto
